results/321a7d404f45e30bfc62de753dd2dde0/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper(emcee, m,c,d, x, , sigma_gauss, [object Object], 1000, 1000, 100, 3, {errval}, fanatapan@yahoo.co.uk, 321a7d404f45e30bfc62de753dd2dde0, {modelStrings},   argslist = (x, 0.65, data)
                                           ^
SyntaxError: invalid syntax
